--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "4.4.1",
+    "dropzone": "^5.7.2",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "stimulus": "^2.0.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
